--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.8.3",
+    "primeicons": "^6.0.1",
+    "vee-validate": "^4.5.8",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.10"
+    "vuetify": "^3.1.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -25,11 +29,11 @@
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.11",
     "cypress": "^12.7.0",
     "eslint": "^8.34.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -39,7 +43,7 @@
     "prettier": "^2.8.4",
     "start-server-and-test": "^2.0.0",
     "typescript": "~4.8.4",
-    "vite": "^4.1.4",
+    "vite": "^4.2.0",
     "vitest": "^0.29.1",
     "vue-tsc": "^1.2.0"
   }
