--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jest": "^29.5.0",
     "@types/jsdom": "^21.1.0",
